Finished Onboarding, basic app UI
- Onboarding assets housekeeping
- User view with feed loagin (static for now)
- Following (friends) view connected to solid Friends
- Updated Tailwind CSS for futureproofing
- Various svg icons (feather icons)
- Feed View with posting (demo feed for now [cats])
- for ibex.js updates see ibex-lib repository

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    background-color: #EDF0F1;
+}
+
 h1{
     @apply text-3xl font-bold;
 }
@@ -42,3 +46,9 @@ h3{
         pointer-events: none;
     }
 }
+
+main.main{
+    width:calc(100vw - 6rem);
+    @apply ml-24;
+    @apply mt-2;
+  }
