Own posts in profile page, can delete posts
- Triangle alert SVG icon
- Red color button
- Darker bolder border in Form Groups
- Delete modal in Post component
- Added scaffolding for feed "cache"
- Can delete own posts in Feed and Profile views

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -33,7 +33,7 @@ h3{
 }
 
 
-@each $color in primary,secondary,green,orange,gray{
+@each $color in primary,secondary,green,orange,gray,red{
     .btn-$(color){
         @apply text-white bg-$(color)-500 border-$(color)-500 transition-colors duration-100 ease-out;
     }
